--- a/cv.html
+++ b/cv.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Aine Ito</title>
+	<title>Daniela Palleschi</title>
 
 	<meta name="description" content="Doctoral candidate at the Humboldt-Universität zu Berlin">
   <link rel="icon" href="images/initials.png">
@@ -34,7 +34,6 @@
 						 <li><a href="publications.html">Publications</a></li>
 						 <li><a href="presentations.html">Presentations</a></li>
 						 <li><a href="resources.html">Resources</a></li>
-						 <li><a href="r_command.html">R commands</a></li>
 					 </ul>
 			 </div>
 			 </div>
@@ -48,8 +47,10 @@
 				<p style="margin-bottom:0.5em;">Institute of German Language and Linguistics</p>
 				 <span><a href='https://www.hu-berlin.de/en'>Humboldt-Universität zu Berlin</a></span></p>
 	 			<br>
+	 			<a class="twitter-timeline" data-height="600" data-theme="light" href="https://twitter.com/dpalleswho">Tweets by dpalleswho</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	 	</div><!-- / sidebar end -->
 
+<!-- Contents  ------------------------------------------------------------------------------>
 
 <div id="container">
   <div id="contents">
@@ -176,7 +177,6 @@
 
 <h3>Technical and research skills</h3>
 			<li>Eye-tracking (EyeLink1000, Experiment Builder, EyeLink Data Viewer)</li>
-			<li>Stimulus presentation (Presentation)</li>
 			<li>Audio processing (Praat, Audacity)</li>
 			<li>Statistics (R)</li>
 			<li>Dynamic reports (RMarkdown)</li>
@@ -190,11 +190,7 @@
 
     </div> <!-- / contents end -->
 	</div> <!-- / container end -->
-
-	<div id="sidebar">
-			<a class="twitter-timeline" data-height="600" data-theme="light" href="https://twitter.com/dpalleswho">Tweets by dpalleswho</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-	</div><!-- / sidebar end -->
-
+	
 
 </div> <!-- / main end -->
 
