--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Daniela Palleschi</title>
 
-	<meta name="description" content="Doctoral candidate at the ">
+	<meta name="description" content="Doctoral candidate at the Humboldt-Universität zu Berlin">
   <link rel="icon" href="images/initials.png">
 	<link rel="stylesheet" href="style.css" type="text/css">
 
@@ -41,13 +41,16 @@
 	 </div>
 
 
-	 	<div id="sidebar">
+<div id="sidebar">
 	 		<a href="/"><img src="images/profile.png" width="150px" height="200px" alt="photo" /></a>
 	 			<p style="margin-bottom:0.5em;">wissenschaftliche Mitarbeiterin<br>(scientific staff member)</p>
 				<p style="margin-bottom:0.5em;">Institute of German Language and Linguistics</p>
 				 <span><a href='https://www.hu-berlin.de/en'>Humboldt-Universität zu Berlin</a></span></p>
 	 			<br>
+	 			<a class="twitter-timeline" data-height="600" data-theme="light" href="https://twitter.com/dpalleswho">Tweets by dpalleswho</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	 	</div><!-- / sidebar end -->
+
+<!-- Contents  ------------------------------------------------------------------------------>
 
 <div id="container">
   <div id="contents">
