--- a/presentations.html
+++ b/presentations.html
@@ -4,9 +4,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Aine Ito</title>
+	<title>Daniela Palleschi</title>
 
-	<meta name="description" content="Psycholinguist at the National University of Singapore">
+	<meta name="description" content="Doctoral candidate at the Humboldt-Universität zu Berlin">
   <link rel="icon" href="images/initials.png">
 	<link rel="stylesheet" href="style.css" type="text/css">
 
@@ -41,15 +41,16 @@
 	 </div>
 
 
-	 	<div id="sidebar">
-	 		<a href="/"><img src="images/profile.png" width="200px" height="289px" alt="photo" /></a>
-	 			<p style="margin-bottom:0.5em;">Assistant Professor </p>
-				<p style="margin-bottom:0.5em;">Department of English Language & Literature </p>
-				 <span><a href='http://www.fas.nus.edu.sg/ell/'>National University of Singapore</a></span></p>
+<div id="sidebar">
+	 		<a href="/"><img src="images/profile.png" width="150px" height="200px" alt="photo" /></a>
+	 			<p style="margin-bottom:0.5em;">wissenschaftliche Mitarbeiterin<br>(scientific staff member)</p>
+				<p style="margin-bottom:0.5em;">Institute of German Language and Linguistics</p>
+				 <span><a href='https://www.hu-berlin.de/en'>Humboldt-Universität zu Berlin</a></span></p>
 	 			<br>
+	 			<a class="twitter-timeline" data-height="600" data-theme="light" href="https://twitter.com/dpalleswho">Tweets by dpalleswho</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	 	</div><!-- / sidebar end -->
 
-<!-- PAGE CONTENT -------------------------------------------------------------------------------->
+<!-- Contents  ------------------------------------------------------------------------------>
 
 <div id="container">
   <div id="contents">
@@ -80,13 +81,7 @@
     </div> <!-- / contents end -->
 	</div> <!-- / container end -->
 
-<!-- TWITTER SIDEBAR -------------------------------------------------------------------------------->
-
-	<div id="sidebar">
-			<a class="twitter-timeline" data-height="600" data-theme="light" href="https://twitter.com/aine_ito?ref_src=twsrc%5Etfw">Tweets by @dpalleswho</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-	</div><!-- / sidebar end -->
-	
-	</div> <!-- / main end -->
+</div> <!-- / main end -->
 
 </body>
 </html>
