--- a/resources.html
+++ b/resources.html
@@ -4,9 +4,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Aine Ito</title>
+	<title>Daniela Palleschi</title>
 
-	<meta name="description" content="Psycholinguist at the National University of Singapore">
+	<meta name="description" content="Doctoral candidate at the Humboldt-Universität zu Berlin">
   <link rel="icon" href="images/initials.png">
 	<link rel="stylesheet" href="style.css" type="text/css">
 
@@ -20,10 +20,10 @@
 		<div id="header_inner" class="clearfix">
 		<div id="h_logo">
 				<h2><a href="index.html">
-						Aine Ito
+						Daniela Palleschi
 				</a></h2>
 				<p class="h_sub">
-						伊藤愛音
+						dænˈjɛlə pɑːˈleski
 				</p>
 		</div>
 
@@ -34,7 +34,6 @@
 						 <li><a href="publications.html">Publications</a></li>
 						 <li><a href="presentations.html">Presentations</a></li>
 						 <li><a href="resources.html">Resources</a></li>
-						 <li><a href="r_command.html">R commands</a></li>
 					 </ul>
 			 </div>
 			 </div>
@@ -42,98 +41,88 @@
 	 </div>
 
 
-	 	<div id="sidebar">
-	 		<a href="/"><img src="images/profile.jpg" width="200px" height="289px" alt="photo" /></a>
-	 			<p style="margin-bottom:0.5em;">Assistant Professor </p>
-				<p style="margin-bottom:0.5em;">Department of English Language & Literature </p>
-				 <span><a href='http://www.fas.nus.edu.sg/ell/'>National University of Singapore</a></span></p>
+<div id="sidebar">
+	 		<a href="/"><img src="images/profile.png" width="150px" height="200px" alt="photo" /></a>
+	 			<p style="margin-bottom:0.5em;">wissenschaftliche Mitarbeiterin<br>(scientific staff member)</p>
+				<p style="margin-bottom:0.5em;">Institute of German Language and Linguistics</p>
+				 <span><a href='https://www.hu-berlin.de/en'>Humboldt-Universität zu Berlin</a></span></p>
 	 			<br>
+	 			<a class="twitter-timeline" data-height="600" data-theme="light" href="https://twitter.com/dpalleswho">Tweets by dpalleswho</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	 	</div><!-- / sidebar end -->
 
+<!-- Contents  ------------------------------------------------------------------------------>
 
 <div id="container">
   <div id="contents">
 
-<h3>Database</h3>
-			<li><a href='http://meshugga.ugent.be/open-lexicons/interfaces/subtlex-uk/'>Subtlex UK</a>:
-				Frequency for British English based on subtitles of British television programmes </li>
-			<li><a href='http://lsa.colorado.edu/'>Latent Semantic Analysis</a>:
-					word to word </li>
-			<li><a href='http://psych.paczynski.net/lsa.html'>Lexico-Semantic Association</a>:
-					word to sentence </li>
-			<li><a href='https://websites.psychology.uwa.edu.au/school/MRCDatabase/uwa_mrc.htm'>MRC Psycholinguistic Database</a>:
-					for familiarity, imageability and concreteness ratings, among others</li>
-			<li><a href='http://www.neuro.mcw.edu/mcword/'>MCWord: An Orthographic Wordform Database</a>:
-					for obtaining orthographic neighbourhood frequency and generating lists of nonwords</li>
-			<li><a href='http://sentencenorms.net/'>Sentence norms</a>:
-						Completion norms for 3085 English sentence contexts, for obtaining sentences with a target word with a certain cloze value </li>
-			<li><a href='https://www.kanjidatabase.com/'>Kanji database</a>:
-						Kanji frequency, On- and Kun-reading frequencies, On-reading ratio, kanji productivity of two-kanji compounds, symmetry of kanji productivity, entropy, number of meanings, etc.</li>
-			<li><a href='http://www.gavo.t.u-tokyo.ac.jp/ojad/'>Online Japanese Accent Dictionary </a>:
-			for obtaining Tokyo accent and generating lists of words with a certain accent type</li>
-			<li><a href='http://w3.usf.edu/FreeAssociation/'>University of South Florida Free Association Norms</a>:
-			Semantic Association database</li>
-			<li><a href='https://books.google.com/ngrams'>Google Ngram Viewer</a>:
-			Ngrams in Google's text corpora </li>
+As researchers, it is important we plan and take into account how we analyse our data before we being data collection. I recommend the following resources for students looking to get started with linear mixed models (LMMs) in R, or for researchers looking to brush up on or expand their knowledge. If you've never analysed data using LMMs in R before, I'd recommend starting with the textbooks and tutorials listed. Otherwise, working through the list of "required reading" will ensure you're aware of the advantages but also pitfalls of LMMs. I plan to add resources for Bayesian analyses soon. <b>Full disclosure:</b> I'm still working through some of these materials myself.
 
-<h3>Corpora</h3>
+<h3>General data science and best practice</h3>
+<li>Nordmann, E. & DeBruine, L. (2022). Applied Data Skills: Processing and Presenting Data [<a href='https://psyteachr.github.io/ads-v1/'>E-book</a>]
+<li>DeBruine, L. (2022) Tips for Sharing Code and Data. [<a href='https://debruine.github.io/data-code-tips/'>link</a>]<li>Wickham, H & Grolemund, G. (2017). R for Data Science [<a href='https://r4ds.had.co.nz/index.html'>E-book</a>]</li>
 
-<li><a href='http://www.natcorp.ox.ac.uk/'>British National Corpus</a>:
-This corpus contains a 100 million words of text texts from a wide range of genres</li>
-<li><a href='https://www.english-corpora.org/coca/'>Corpus of Contemporary American English</a>:
-This corpus contains more than 520 million words of text. It is equally divided among spoken, fiction, popular magazines, newspapers, and academic texts. </li>
-<li><a href='https://chunagon.ninjal.ac.jp/auth/login?service=https%3A%2F%2Fchunagon.ninjal.ac.jp%2Fj_spring_cas_security_check'>Chunagon (中納言)</a>:
-Corpus of written & spoken Japanese from NINJAL</li>
-<li><a href='http://linguistica.sns.it/CoLFIS/Home_eng.htm'>Corpus e Lessico di Frequenza dell'Italiano Scritto (CoLFIS)</a>:
-Lexical database of written Italian </li>
+<h3>Introductory textbooks and tutorials</h3>
+<li>Bare, D. Learning Statistical Models Through Simulation in R[<a href='https://psyteachr.github.io/stat-models-v1/'>E-book</a>]
+<li>Vasishth, S., Schad, D., Bürki, A., & Kliegl, R. Linear Mixed Models in Linguistics and Psychology: A Comprehensive.<a href='https://vasishth.github.io/Freq_CogSci/'>[E-book]</a>
+<li>Brown, V. A. (2021). An introduction to linear mixed-effects modeling in R. Advances in Methods and Practices in Psychological Science, 4(1).<a href='https://doi.org/10.1177/2515245920960351'>[doi]</a>
+<li>Winter, B. (2019). Statistics for Linguists: An Introduction Using R. Statistics for Linguists: An Introduction Using R. Routledge.<a href='https://doi.org/10.4324/9781315165547'>[doi]</a>; full access with Humboldt-Universität zu Berlin VPN (and possibly others)
+<li>Winter, B. (2013). Linear models and linear mixed effects models in R: Tutorial 1.
+<a href='https://bodowinter.com/tutorial/bw_LME_tutorial1.pdf'>[pdf]</a>
+<li>Winter, B. (2013). A very basic tutorial for performing linear mixed effects analyses (Tutorial 2).
+<a href='https://bodowinter.com/tutorial/bw_LME_tutorial2.pdf'>[pdf]</a></li>
 
+<h3>Further reading</h3>
+<b>Classic LMM papers</b>
+<li>Baayen, R. H., Davidson, D. J., & Bates, D. M. (2008). Mixed-effects modeling with crossed random effects for subjects and items. <i>Journal of Memory and Language</i>, 59(4), 390–412. <a href='https://doi.org/10.1016/j.jml.2007.12.005'>[doi]</a></li>
+<li>Kliegl, R., Wei, P., Dambacher, M., Yan, M., & Zhou, X. (2011). Experimental effects and individual differences in linear mixed models: Estimating the relationship between spatial, object, and attraction effects in visual attention. <i>Frontiers in Psychology</i>, 1(JAN), 1–12.<a href=' https://doi.org/10.3389/fpsyg.2010.00238'>[doi]</a></li>
+<li>Jaeger, T. F., Graff, P., Croft, W., & Pontillo, D. (2011). Mixed effect models for genetic and areal dependencies in linguistic typology. <i>Linguistic Typology</i>, 15(2), 281–319. <a href='https://doi.org/10.1515/LITY.2011.021'>[doi]</a></li>
+<li>Barr, D. J., Levy, R., Scheepers, C., & Tily, H. J. (2013). Random effects structure for confirmatory hypothesis testing: Keep it maximal. <i>Journal of Memory and Language</i>, 68(3), 255–278. <a href='https://doi.org/10.1016/j.jml.2012.11.001'>[doi]</a></li>
+<li>Barr, D. J. (2013). Random effects structure for testing interactions in linear mixed-effects models. Frontiers in Psychology, 4(June), 3–4. <a href='https://doi.org/10.3389/fpsyg.2013.00328'>[doi]</a></li>
+<li>Bates, D., Kliegl, R., Vasishth, S., & Baayen, H. (2015). Parsimonious Mixed Models, (2000). <a href='http://arxiv.org/abs/1506.0496'>[arXiv]</a></li>
+<li>Matuschek, H., Kliegl, R., Vasishth, S., Baayen, H., & Bates, D. (2017). Balancing Type I error and power in linear mixed models. <i>Journal of Memory and Language</i>, 94, 305–315. <a href='https://doi.org/10.1016/j.jml.2017.01.001'>[doi]</a></li>
 
-<h3>E-books</h3>
+<br>
 
-<li><a href='https://vasishth.github.io/Freq_CogSci/'>Linear Mixed Models in Linguistics and Psychology: A Comprehensive Introduction</a>
-by Shravan Vasishth, Daniel Schad, Audrey Bürki, and Reinhold Kliegl</li>
-<li><a href='https://r4ds.had.co.nz/index.html'>R for Data Science</a>
-by Hadley Wickham and Garret Grolemund</li>
-<li><a href='https://psyteachr.github.io/stat-models-v1/index.html'>Learning Statistical Models Through Simulation in R</a>
-by Dale Barr</li>
+<b>Recent papers</b>
 
+<li>Winter, Bodo and Grice, Martine. "Independence and generalizability in linguistics" Linguistics, vol. 59, no. 5, 2021, pp. 1251-1277. <a href='https://doi.org/10.1515/ling-2019-0049'>[doi]</a></li>
 
-<h3>Picture database</h3>
+<li>Fühner, T., Granacher, U., Golle, K., & Kliegl, R. (2021). Age and sex effects in physical fitness components of 108,295 third graders including 515 primary schools and 9 cohorts. Scientific Reports, 11(1), 1–13. <a href='https://doi.org/10.1038/s41598-021-97000-4'>[doi]</a></li>
 
-<p style="margin-bottom:0.8em; font-weight: bold;">Black & White</p>
+<li>Meteyard, L., & Davies, R. A. I. (2020). Best practice guidance for linear mixed-effects models in psychological science. Journal of Memory and Language, 112(January), 104092. <a href='https://doi.org/10.1016/j.jml.2020.104092'>[doi]</a></li>
 
-<li><a href='https://pubmed.ncbi.nlm.nih.gov/7373248/'>260 pictures standardised in English</a>:
-Snodgrass & Vanderwart (1980)</li>
-<li><a href='https://link.springer.com/article/10.3758/s13428-011-0176-7#SupplementaryMaterial'>360 pictures standardised in Japanese</a>:
-Nishimoto, Ueda, Miyawaki, Une, & Takahashi (2012)</li>
-<li><a href='https://crl.ucsd.edu/experiments/ipnp/1stimuli.html#objects'>International Picture Naming Project</a>
- </li>
+<li>Vasishth, S., & gelman, andrew. (2019). How to embrace variation and accept uncertainty in linguistic and psycholinguistic data analysis, 0–3. <a href='https://doi.org/10.31234/osf.io/zcf8s'>[doi]</a></li>
 
-<p style="margin-bottom:0.8em; font-weight: bold;">Colour</p>
+<li>Brauer, M., & Curtin, J. J. (2018). Linear mixed-effects models and the analysis of nonindependent data: A unified framework to analyze categorical and continuous independent variables that vary within-subjects and/or within-items. Psychological Methods, 23(3), 389–411. <a href='https://doi.org/10.1037/met0000159'>[doi]</a></li>
 
-<li><a href='https://sites.google.com/site/bosstimuli/'>Bank of Standardised stimuli (BOSS)</a>:
-Brodeur, Dionne-Dostie, Montreuil, & Lepage (2010)</li>
-<li><a href='https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0037527'>Colour version of Snodgrass & Vanderwart (1980)</a>:
-Moreno-Martínez & Montoro (2012)</li>
-<li><a href='https://www.bcbl.eu/databases/multipic'>MultiPic</a>: A standardized set of 750 drawings with multilingual norms</li>
+<li>Judd, C. M., Westfall, J., & Kenny, D. A. (2017). Experiments with More Than One Random Factor: Designs, Analytic Models, and Statistical Power. Annual Review of Psychology, 68, 601–625. <a href='https://doi.org/10.1146/annurev-psych-122414-033702'>[doi]</a></li>
 
-<h3>Tools</h3>
+<br>
 
-<li><a href='http://www.mrc-cbu.cam.ac.uk/people/maarten.van-casteren/mixandmatch/'>Mix</a>:
-stimuli (pseudo-)randomisation tool</li>
-<li><a href='https://www.randomizer.org/'>Research Randomizer</a>:
-simple randomisation tool</li>
-<li><a href='https://farm.pcibex.net/'>PCIbex Farm</a>:
-web-based experiments</li>
+<b>Special topics</b>
 
+<br>
+<i>ERPs and LMMs</i>
+<li>Kretzschmar, F., & Alday, P. (n.d.). Principles of stastical analyses: old and new tools. In M. Grimaldi, Y. Shtyrov, & E. Brattico (Eds.), <i>Language Electrified. Techniques, Methods, Applications, and Future Perspectives in the Neurophysiological Investigation of Language</i>.<a href='https://psyarxiv.com/nyj3k/'>[PsyArXiv]</a></li>
+
+<br>
+<i>Contrast coding</i>
+<li>Schad, D. J., Vasishth, S., Hohenstein, S., & Kliegl, R. (2020). How to capitalize on a priori contrasts in linear (mixed) models: A tutorial. Journal of Memory and Language, 110(October 2019), 104038. <a href='https://doi.org/10.1016/j.jml.2019.104038'>[doi]</a>
+
+<li>Brehm, L., & Alday, P. (n.d.). A decade of mixed models: it’s past time to set your contrasts. Journal of Memory and Language.[<a href='https://pure.mpg.de/pubman/faces/ViewItemOverviewPage.jsp?itemId=item_3251054'>pdf</a> not yet publicly available; contact the author(s) if you're keen!]</li>
+
+<br>
+<i>Multiple comparisons in eye-tracking (reading)</i>
+<li>von der Malsburg, T., & Angele, B. (2017). False positives and other statistical errors in standard analyses of eye movements in reading. Journal of Memory and Language, 94, 119–133. <a href='https://doi.org/10.1016/j.jml.2016.10.003'>[doi]</a></li>
+
+<br>
+<i>Data simulation and power</i>
+<li>DeBruine, L. M., & Barr, D. J. (2021). Understanding Mixed-Effects Models Through Data Simulation. Advances in Methods and Practices in Psychological Science, 4(1), 251524592096511. <a href='https://doi.org/10.1177/2515245920965119'>[doi]</a>
+
+<li>Kumle, L., Võ, M. L. H., & Draschkow, D. (2021). Estimating power in (generalized) linear mixed models: An open introduction and tutorial in R. Behavior Research Methods. <a href='https://doi.org/10.3758/s13428-021-01546-0'>[doi]</a></li>
 
     </div> <!-- / contents end -->
 	</div> <!-- / container end -->
-
-	<div id="sidebar">
-			<a class="twitter-timeline" data-height="600" data-theme="light" href="https://twitter.com/aine_ito?ref_src=twsrc%5Etfw">Tweets by aine_ito</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-	</div><!-- / sidebar end -->
-
 
 </div> <!-- / main end -->
 
