--- a/presentations.html
+++ b/presentations.html
@@ -55,7 +55,7 @@
 <div id="container">
   <div id="contents">
 
-      <h3>Conference/workshop presentations</h3>
+<h3>Conference presentations</h3>
 
 			<table class="table_line">
 	    <TR VALIGN=TOP>
