--- a/publications.html
+++ b/publications.html
@@ -40,7 +40,6 @@
 
 	 </div>
 
-
 <div id="sidebar">
 	 		<a href="/"><img src="images/profile.png" width="150px" height="200px" alt="photo" /></a>
 	 			<p style="margin-bottom:0.5em;">wissenschaftliche Mitarbeiterin<br>(scientific staff member)</p>
@@ -60,10 +59,10 @@
 			<table class="table_line">
 				<tr>
 						<td class="table_head">
-								<p>2022</p>
+								<p>2020</p>
 						</td>
 						<td class="table_right">
-							<p>Palleschi, D., Ronderos, C. R., & Knoeferle, P. (2020). Effects of linguistic context and world knowledge on the processing of tense and aspect: evidence from eye-tracking. In <i>CogSci</i>.		<a href='https://cognitivesciencesociety.org/cogsci20/papers/0821/index.html'>[abstract]</a>
+							<p>Palleschi, D., Ronderos, C. R., & Knoeferle, P. Effects of linguistic context and world knowledge on the processing of tense and aspect: evidence from eye-tracking. In <i>CogSci</i>.		<a href='https://cognitivesciencesociety.org/cogsci20/papers/0821/index.html'>[abstract]</a>
 							<a href='https://cognitivesciencesociety.org/cogsci20/papers/0821/0821.pdf>'>[pdf]</a> </p>
 						</td>
 					</tr>
