--- a/resources.html
+++ b/resources.html
@@ -121,6 +121,12 @@ As researchers, it is important we plan and take into account how we analyse our
 
 <li>Kumle, L., Võ, M. L. H., & Draschkow, D. (2021). Estimating power in (generalized) linear mixed models: An open introduction and tutorial in R. Behavior Research Methods. <a href='https://doi.org/10.3758/s13428-021-01546-0'>[doi]</a></li>
 
+<br>
+
+<h3>GitHub Pages</h3>
+
+I built these pages using my former colleague <a href=''>Aine Ito</a>'s code, which she so generously shared with me. To pay it forward, <a href='https://github.com/daniela-palleschi/daniela-palleschi.github.io'>here is my code</a>, based on hers. And <a href='https://resources.github.com/whitepapers/github-and-rstudio/'>here</a> is a walk-through that helped me know what to do with it. In short: have GitHub, have RStudio, zip the repository (Code > Download ZIP), edit in RStudio (First, file > new Project > Version control), change 'image' files accordingly, commit changes to repository, et voilà.
+
     </div> <!-- / contents end -->
 	</div> <!-- / container end -->
 
