--- a/cv.html
+++ b/cv.html
@@ -47,6 +47,7 @@
 				<p style="margin-bottom:0.5em;">Institute of German Language and Linguistics</p>
 				 <span><a href='https://www.hu-berlin.de/en'>Humboldt-Universität zu Berlin</a></span></p>
 	 			<br>
+	 			<a class="twitter-timeline" data-height="600" data-theme="light" href="https://twitter.com/dpalleswho">Tweets by dpalleswho</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	 	</div><!-- / sidebar end -->
 
 <!-- Contents  ------------------------------------------------------------------------------>
@@ -161,7 +162,7 @@
 	 <p style="margin-top:0.8em; margin-bottom:0.4em; font-weight: bold;">Conferences</p>
 			<li>ESLP (Embodied and Situated Language Processing) (2018)</li>
 			
-<h3>Funding acquisition</h3>
+<h3>Workshops</h3>
 
 <table class="table_line">
 <tr>
@@ -185,7 +186,7 @@
 
 	<h3>Languages</h3>
 		<li>English (Native)</li>
-		<li>German (Intermediate; <a href='https://en.wikipedia.org/wiki/Common_European_Framework_of_Reference_for_Languages'>CEFR</a> level B2)</li>
+		<li>German (CEFR level B2)</li>
 
     </div> <!-- / contents end -->
 	</div> <!-- / container end -->
