--- a/cv.html
+++ b/cv.html
@@ -58,7 +58,7 @@
       <h3>Education</h3>
 
 			<table class="table_line">
-	    <tr>
+	       <TR VALIGN=TOP>
 	        <td class="table_head">
 	            <p>2018-present</p>
 	        </td>
@@ -66,7 +66,7 @@
 						<p><b>PhD candidate</b>, Institute of German Language and Linguistics, Humboldt-Universität zu Berlin, Germany (Supervisors: Prof. Pia Knoeferle, Prof. Rasha Abdel Rahman)</p>
 	        </td>
 	      </tr>
-	      <tr>
+	         <TR VALIGN=TOP>
 	        <td class="table_head">
 	            <p>2015-2017</p>
 	        </td>
@@ -75,7 +75,7 @@
 	            <p><b>MA in Linguistics</b>, University of Eastern Finland (Finald)</p>
 	        </td>
 	      </tr>
-	      <tr>
+	        <TR VALIGN=TOP>
 	        <td class="table_head">
 	            <p>2008-2012</p>
 	        </td>
@@ -101,15 +101,15 @@
 	  <h3>Teaching experience</h3>
 
 		<table class="table_line">
-    <tr>
+		     <TR VALIGN=TOP>
         <td class="table_head">
-            <p>2020</p>
+            <p>2018, 2019, 2020</p>
         </td>
         <td class="table_right">
-					<p>Tutorial (online) "Language and the Brain" (MA), Berlin School of Mind and Brain, Humboldt-Universität zu Berlin, Germany</p>
+					<p>Tutorial (online) "Language and the Brain" (MA), Berlin School of Mind and Brain, Humboldt-Universität zu Berlin, Germany; lectures led by Prof. Pia Knoeferle and Prof. Friedemann Pulvermüller</p>
         </td>
       </tr>
-      <tr>
+      <TR VALIGN=TOP>
         <td class="table_head">
             <p>2020</p>
         </td>
@@ -117,35 +117,20 @@
             <p>Workshop (online) "Introduction to PCIbex" (open), Humboldt-Universität zu Berlin, Germany</p>
         </td>
       </tr>
-      <tr>
+         <TR VALIGN=TOP>
         <td class="table_head">
             <p>2019-2020</p>
         </td>
         <td class="table_right">
-            <p>Lecture and practical "Statistics with R" (MA), Humboldt-Universität zu Berlin, Germany</p>
-        </td>
-      </tr>
-      <tr>
-        <td class="table_head">
-            <p>2019</p>
-        </td>
-        <td class="table_right">
-				<p>Tutorial (online) "Language and the Brain" (MA), Berlin School of Mind and Brain, Humboldt-Universität zu Berlin, Germany</p>
-      </tr>
-			<tr>
-        <td class="table_head">
-            <p>2018</p>
-        </td>
-        <td class="table_right">
-				<p>Tutorial (online) "Language and the Brain" (MA), Berlin School of Mind and Brain, Humboldt-Universität zu Berlin, Germany</p>
+            <p>Lecture and practical "Introduction to Statistics with R and RStudio" (MA), Humboldt-Universität zu Berlin, Germany</p>
         </td>
       </tr>
 </table>
 
-<h3>Funding acquisition</h3>
+<h3>Funding</h3>
 
 <table class="table_line">
-<tr>
+   <TR VALIGN=TOP>
 		<td class="table_head">
 				<p>2017 - 2019</p>
 		</td>
@@ -162,15 +147,23 @@
 	 <p style="margin-top:0.8em; margin-bottom:0.4em; font-weight: bold;">Conferences</p>
 			<li>ESLP (Embodied and Situated Language Processing) (2018)</li>
 			
-<h3>Workshops</h3>
+<h3>Workshops attended</h3>
 
 <table class="table_line">
-<tr>
+   <TR VALIGN=TOP>
+		<td class="table_head">
+				<p>2021</p>
+		</td>
+		<td class="table_right">
+			<p>'Advanced methods in frequentist statistics with Julia' <i>5th Summer School on Statistical Methods for Linguistics and Psychology (Taught by Phillip Alday, Douglas Bates, and Reinhold Kliegl)</i></p>
+		</td>
+	</tr>
+   <TR VALIGN=TOP>
 		<td class="table_head">
 				<p>2020</p>
 		</td>
 		<td class="table_right">
-			<p>Statistical Methods in </p>
+			<p>'Foundational methods in frequentist statistics' <i>4th Summer School on Statistical Methods for Linguistics and Psychology (Taught by Daniel Schad)</i></p>
 		</td>
 	</tr>
 </table>
