--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
 <div id="container">
   <div id="contents">
     <h3>About me</h3>
-      I am currently a scientific staff member and doctoral candidate at the <a href="https://www.linguistik.hu-berlin.de/de">Institute of German Language and Linguistics</a> at the Humboldt-Universität zu Berlin. I am also a doctoral fellow at the <a href="https://https://www.ecn-berlin.de/">Einstein Center for Neurosciences</a> at the Charité - Universitätsmediyin Berlin, and part of the doctoral program at the <a href="https://www.mind-and-brain.de/home/">Berlin School of Mind and Brain</a>. I am completing my doctoral work in the Psycholinguistics group under the supervision of Prof. Pia Knoeferle.
+      I am currently a scientific staff member and doctoral candidate at the <a href="https://www.linguistik.hu-berlin.de/de">Institute of German Language and Linguistics</a> at the Humboldt-Universität zu Berlin. I am also a doctoral fellow at the <a href="https://www.ecn-berlin.de/">Einstein Center for Neurosciences</a> at the Charité - Universitätsmediyin Berlin, and part of the doctoral program at the <a href="https://www.mind-and-brain.de/home/">Berlin School of Mind and Brain</a>. I am completing my doctoral work in the Psycholinguistics group under the supervision of Prof. Pia Knoeferle.
       <br><br>
       After completing an Honours Specialist B.A. in Linguistics at the University of Toronto, I earned my TESOL certification and moved to Berlin to teach English at various companies and institutions, including the Humboldt-Universität zu Berlin. After some years I returned to academia by completing a joint Master's of Science as part of the <a href="https://www.emcl.eu/">European Master's in Clincal Linguistics</a> (EMCL 2015-17 cohort) at the Univerisity of Eastern Finland, Univerisity of Potsdam (Germany), and Univerisity of Groningen (the Netherlands). I also hold a M.A. in Linguistics from the University of Eastern Finland, which was completed in tandem with my M.Sc.
 
 		<h3>Research interests</h3>
 			My current projects investigate the influence of high-level knowledge of the real world on the processing of language. I am specifically interested in how this knowledge interacts with temporal information, such as verb tense. I use eye-tracking during reading, self-paced reading, and electroencephalography (EEG) in order to investigate this interaction.
-			My interests are broader than my current research, and I welcome potential collaborators to reach out. In the past I've specifically been interested in phonetics (acoustic and articulatory), bi- and multi-lingualism, and sociolinguistics at large, but especially sociophonetics.
+			My interests are broader than my current research, and I welcome potential collaborators to reach out.
 			<br><br>
 
 		<h3>Outreach</h3>
@@ -75,7 +75,7 @@
 		<table class="table_line">
     <tr>
         <td class="table_left"><b>
-            <p><img class="picture_r" src="images/post.png" width="50px" height="50px" alt="photo"></p>
+            <p><img class="picture_r" src="images/post.png" width="40px" height="40px" alt="photo"></p>
         </b></td>
         <td class="table_right">
 					<p>Institut für deutsche Sprache und Linguistik<br>
@@ -85,15 +85,24 @@
       </tr>
       <tr>
         <td class="table_left"><b>
-            <p><img class="picture_r" src="images/email.png" width="40px" height="40px" alt="photo"></p>
+            <p><img class="picture_r" src="images/email.png" width="40px" alt="photo"></p>
         </b></td>
         <td class="table_right">
-            <p><img class="picture" src="images/email_address.jpg" width="250px" height="30px" alt="photo"></p>
+            <p><img class="picture" src="images/email_address.jpg" height="20px" alt="photo"></p>
         </td>
       </tr>
       <tr>
         <td class="table_left"><b>
-            <p><img class="picture_r" src="images/links.png" width="40px" height="40px" alt="photo"></p>
+            <p><img class="picture_r" src="images/twitter.png" width="40px" alt="photo"></p>
+        </b></td>
+        <td class="table_right">
+            <p><img class="picture" src="images/twitter_handle.png" height="20px" alt="photo"></p>
+        </td>
+      </tr>
+      <tr>
+        <tr>
+        <td class="table_left"><b>
+            <p><img class="picture_r" src="images/links.png" width="40px" alt="photo"></p>
         </b></td>
         <td class="table_right">
 					<li> <a href="https://www.researchgate.net/profile/Daniela-Palleschi">Research Gate</a> </li>
