--- a/publications.html
+++ b/publications.html
@@ -57,7 +57,7 @@
       <h3>Proceedings articles</h3>
 
 			<table class="table_line">
-				<tr>
+			   <TR VALIGN=TOP>
 						<td class="table_head">
 								<p>2020</p>
 						</td>
