--- a/resources.html
+++ b/resources.html
@@ -58,8 +58,10 @@
 As researchers, it is important we plan and take into account how we analyse our data before we being data collection. I recommend the following resources for students looking to get started with linear mixed models (LMMs) in R, or for researchers looking to brush up on or expand their knowledge. If you've never analysed data using LMMs in R before, I'd recommend starting with the textbooks and tutorials listed. Otherwise, working through the list of "required reading" will ensure you're aware of the advantages but also pitfalls of LMMs. I plan to add resources for Bayesian analyses soon. <b>Full disclosure:</b> I'm still working through some of these materials myself.
 
 <h3>General data science and best practice</h3>
+
+<li>DeBruine, L. (2022). Data Skills for Reproducible Research. [<a href='https://psyteachr.github.io/reprores-v2/'>E-book</a>]
 <li>Nordmann, E. & DeBruine, L. (2022). Applied Data Skills: Processing and Presenting Data [<a href='https://psyteachr.github.io/ads-v1/'>E-book</a>]
-<li>DeBruine, L. (2022) Tips for Sharing Code and Data. [<a href='https://debruine.github.io/data-code-tips/'>link</a>]<li>Wickham, H & Grolemund, G. (2017). R for Data Science [<a href='https://r4ds.had.co.nz/index.html'>E-book</a>]</li>
+<li>DeBruine, L. (2022). Tips for Sharing Code and Data. [<a href='https://debruine.github.io/data-code-tips/'>link</a>]<li>Wickham, H & Grolemund, G. (2017). R for Data Science [<a href='https://r4ds.had.co.nz/index.html'>E-book</a>]</li>
 
 <h3>Introductory textbooks and tutorials</h3>
 <li>Bare, D. Learning Statistical Models Through Simulation in R[<a href='https://psyteachr.github.io/stat-models-v1/'>E-book</a>]
@@ -125,7 +127,7 @@ As researchers, it is important we plan and take into account how we analyse our
 
 <h3>GitHub Pages</h3>
 
-I built these pages using my former colleague <a href=''>Aine Ito</a>'s code, which she so generously shared with me. To pay it forward, <a href='https://github.com/daniela-palleschi/daniela-palleschi.github.io'>here is my code</a>, based on hers. And <a href='https://resources.github.com/whitepapers/github-and-rstudio/'>here</a> is a walk-through that helped me know what to do with it. In short: have GitHub, have RStudio, zip the repository (Code > Download ZIP), edit in RStudio (First, file > new Project > Version control), change 'image' files accordingly, commit changes to repository, et voilà.
+I built these pages using my former colleague <a href='https://aineito.github.io/'>Aine Ito</a>'s code, which she so generously shared with me. To pay it forward, <a href='https://github.com/daniela-palleschi/daniela-palleschi.github.io'>here is my code</a>, based on hers. And <a href='https://resources.github.com/whitepapers/github-and-rstudio/'>here</a> is a walk-through that helped me know what to do with it. In short: have GitHub, have RStudio, zip the repository (Code > Download ZIP), edit in RStudio (First, file > new Project > Version control), change 'image' files accordingly, commit changes to repository, et voilà.
 
     </div> <!-- / contents end -->
 	</div> <!-- / container end -->
