--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <p><img class="picture_r" src="images/twitter.png" width="40px" alt="photo"></p>
         </b></td>
         <td class="table_right">
-            <p><img class="picture" src="images/twitter_handle.png" height="20px" alt="photo"></p>
+            <p><a href='https://twitter.com/dpalleswho'><img class="picture" src="images/twitter_handle.png" height="20px" alt="photo"></a></p>
         </td>
       </tr>
       <tr>
