--- a/cv.html
+++ b/cv.html
@@ -71,8 +71,8 @@
 	            <p>2015-2017</p>
 	        </td>
 	        <td class="table_right">
-	            <p><b>MSc in Clinical Linguistics</b> (EMCL - European Masters in Clinical Linguistics), joint degree from the University of Potsdam (Germany), University of Groningen (Netherlands), and University of Eastern Finland (Finald) (Supervisor: Prof. Roelien Bastiaanse)</p>
-	            <p><b>MA in Linguistics</b>, University of Eastern Finland (Finald)</p>
+	            <p><b>MSc in Clinical Linguistics</b> (EMCL - European Masters in Clinical Linguistics), joint degree from the University of Potsdam (Germany), University of Groningen (Netherlands), and University of Eastern Finland (Finland) (Supervisor: Prof. Roelien Bastiaanse)</p>
+	            <p><b>MA in Linguistics</b>, University of Eastern Finland (Finland)</p>
 	        </td>
 	      </tr>
 	        <TR VALIGN=TOP>
