--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html lang="en-GB">
 <head>
+  <meta name="google-site-verification" content="SLHLa6Y5G00ZeyHmshHrfp7KpBiJACr4BBjU1piTR40" />
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Daniela Palleschi</title>
