--- a/resources.html
+++ b/resources.html
@@ -66,7 +66,7 @@ As researchers, it is important we plan and take into account how we analyse our
 <li>Wickham, H & Grolemund, G. (2017). R for Data Science [<a href='https://r4ds.had.co.nz/index.html'>E-book</a>]</li>
 
 <h3>Introductory textbooks and tutorials</h3>
-<li>Bare, D. Learning Statistical Models Through Simulation in R[<a href='https://psyteachr.github.io/stat-models-v1/'>E-book</a>]
+<li>Barr, D. Learning Statistical Models Through Simulation in R [<a href='https://psyteachr.github.io/stat-models-v1/'>E-book</a>]
 <li>Vasishth, S., Schad, D., Bürki, A., & Kliegl, R. Linear Mixed Models in Linguistics and Psychology: A Comprehensive.<a href='https://vasishth.github.io/Freq_CogSci/'>[E-book]</a>
 <li>Brown, V. A. (2021). An introduction to linear mixed-effects modeling in R. Advances in Methods and Practices in Psychological Science, 4(1).<a href='https://doi.org/10.1177/2515245920960351'>[doi]</a>
 <li>Winter, B. (2019). Statistics for Linguists: An Introduction Using R. Statistics for Linguists: An Introduction Using R. Routledge.<a href='https://doi.org/10.4324/9781315165547'>[doi]</a>; full access with Humboldt-Universität zu Berlin VPN (and possibly others)
