--- a/resources.html
+++ b/resources.html
@@ -57,7 +57,7 @@
 
 As researchers, it is important we plan and take into account how we analyse our data before we being data collection. I recommend the following resources for students looking to get started with linear mixed models (LMMs) in R, or for researchers looking to brush up on or expand their knowledge. If you've never analysed data using LMMs in R before, I'd recommend starting with the textbooks and tutorials listed. Otherwise, working through the list of "required reading" will ensure you're aware of the advantages but also pitfalls of LMMs. I plan to add resources for Bayesian analyses soon. <b>Full disclosure:</b> I'm still working through some of these materials myself.
 
-<h3>R and RMarkdown: best practice</h3>
+<h3>Data Skills with R and RMarkdown</h3>
 
 <li>DeBruine, L. (2022). Data Skills for Reproducible Research. [<a href='https://psyteachr.github.io/reprores-v2/'>E-book</a>]
 <li>Nordmann, E. & DeBruine, L. (2022). Applied Data Skills: Processing and Presenting Data [<a href='https://psyteachr.github.io/ads-v1/'>E-book</a>]
@@ -65,7 +65,7 @@ As researchers, it is important we plan and take into account how we analyse our
 <li>Tierney, N. (2019). RMarkdown for Scientists [<a href='https://njtierney.github.io/rmd4sci/'>E-book</a>]
 <li>Wickham, H & Grolemund, G. (2017). R for Data Science [<a href='https://r4ds.had.co.nz/index.html'>E-book</a>]</li>
 
-<h3>Introductory textbooks and tutorials</h3>
+<h3>Linear Mixed Models: Introductory textbooks and tutorials</h3>
 <li>Barr, D. Learning Statistical Models Through Simulation in R [<a href='https://psyteachr.github.io/stat-models-v1/'>E-book</a>]
 <li>Vasishth, S., Schad, D., Bürki, A., & Kliegl, R. Linear Mixed Models in Linguistics and Psychology: A Comprehensive.<a href='https://vasishth.github.io/Freq_CogSci/'>[E-book]</a>
 <li>Brown, V. A. (2021). An introduction to linear mixed-effects modeling in R. Advances in Methods and Practices in Psychological Science, 4(1).<a href='https://doi.org/10.1177/2515245920960351'>[doi]</a>
@@ -89,17 +89,17 @@ As researchers, it is important we plan and take into account how we analyse our
 
 <b>Recent papers</b>
 
-<li>Winter, Bodo and Grice, Martine. "Independence and generalizability in linguistics" Linguistics, vol. 59, no. 5, 2021, pp. 1251-1277. <a href='https://doi.org/10.1515/ling-2019-0049'>[doi]</a></li>
+<li>Winter, Bodo and Grice, Martine. "Independence and generalizability in linguistics" <i>Linguistics</i>, vol. 59, no. 5, 2021, pp. 1251-1277. <a href='https://doi.org/10.1515/ling-2019-0049'>[doi]</a></li>
 
-<li>Fühner, T., Granacher, U., Golle, K., & Kliegl, R. (2021). Age and sex effects in physical fitness components of 108,295 third graders including 515 primary schools and 9 cohorts. Scientific Reports, 11(1), 1–13. <a href='https://doi.org/10.1038/s41598-021-97000-4'>[doi]</a></li>
+<li>Fühner, T., Granacher, U., Golle, K., & Kliegl, R. (2021). Age and sex effects in physical fitness components of 108,295 third graders including 515 primary schools and 9 cohorts. <i>Scientific Reports</i>, 11(1), 1–13. <a href='https://doi.org/10.1038/s41598-021-97000-4'>[doi]</a></li>
 
-<li>Meteyard, L., & Davies, R. A. I. (2020). Best practice guidance for linear mixed-effects models in psychological science. Journal of Memory and Language, 112(January), 104092. <a href='https://doi.org/10.1016/j.jml.2020.104092'>[doi]</a></li>
+<li>Meteyard, L., & Davies, R. A. I. (2020). Best practice guidance for linear mixed-effects models in psychological science. <i>Journal of Memory and Language</i>, 112(January), 104092. <a href='https://doi.org/10.1016/j.jml.2020.104092'>[doi]</a></li>
 
-<li>Vasishth, S., & gelman, andrew. (2019). How to embrace variation and accept uncertainty in linguistic and psycholinguistic data analysis, 0–3. <a href='https://doi.org/10.31234/osf.io/zcf8s'>[doi]</a></li>
+<li>Vasishth, S., & gelman, andrew. (2019). How to embrace variation and accept uncertainty in linguistic and psycholinguistic data analysis, <i>Linguistics</i> 59.5 (2021). <a href='https://doi.org/10.31234/osf.io/zcf8s'>[doi]</a></li>
 
-<li>Brauer, M., & Curtin, J. J. (2018). Linear mixed-effects models and the analysis of nonindependent data: A unified framework to analyze categorical and continuous independent variables that vary within-subjects and/or within-items. Psychological Methods, 23(3), 389–411. <a href='https://doi.org/10.1037/met0000159'>[doi]</a></li>
+<li>Brauer, M., & Curtin, J. J. (2018). Linear mixed-effects models and the analysis of nonindependent data: A unified framework to analyze categorical and continuous independent variables that vary within-subjects and/or within-items. <i>Psychological Methods</i>, 23(3), 389–411. <a href='https://doi.org/10.1037/met0000159'>[doi]</a></li>
 
-<li>Judd, C. M., Westfall, J., & Kenny, D. A. (2017). Experiments with More Than One Random Factor: Designs, Analytic Models, and Statistical Power. Annual Review of Psychology, 68, 601–625. <a href='https://doi.org/10.1146/annurev-psych-122414-033702'>[doi]</a></li>
+<li>Judd, C. M., Westfall, J., & Kenny, D. A. (2017). Experiments with More Than One Random Factor: Designs, Analytic Models, and Statistical Power. <i>Annual Review of Psychology</i>, 68, 601–625. <a href='https://doi.org/10.1146/annurev-psych-122414-033702'>[doi]</a></li>
 
 <br>
 
@@ -111,19 +111,20 @@ As researchers, it is important we plan and take into account how we analyse our
 
 <br>
 <i>Contrast coding</i>
-<li>Schad, D. J., Vasishth, S., Hohenstein, S., & Kliegl, R. (2020). How to capitalize on a priori contrasts in linear (mixed) models: A tutorial. Journal of Memory and Language, 110(October 2019), 104038. <a href='https://doi.org/10.1016/j.jml.2019.104038'>[doi]</a>
+<li>Schad, D. J., Vasishth, S., Hohenstein, S., & Kliegl, R. (2020). How to capitalize on a priori contrasts in linear (mixed) models: A tutorial. <i>Journal of Memory and Language</i>, 110(October 2019), 104038. <a href='https://doi.org/10.1016/j.jml.2019.104038'>[doi]</a>
 
-<li>Brehm, L., & Alday, P. (n.d.). A decade of mixed models: it’s past time to set your contrasts. Journal of Memory and Language.[<a href='https://pure.mpg.de/pubman/faces/ViewItemOverviewPage.jsp?itemId=item_3251054'>pdf</a> not yet publicly available; contact the author(s) if you're keen!]</li>
+<li>Brehm, L., & Alday, P. (n.d.). A decade of mixed models: it’s past time to set your contrasts. <i>Journal of Memory and Language.</i>[<a href='https://pure.mpg.de/pubman/faces/ViewItemOverviewPage.jsp?itemId=item_3251054'>pdf</a> not yet publicly available; contact the author(s) if you're keen!]</li>
 
 <br>
-<i>Multiple comparisons in eye-tracking (reading)</i>
-<li>von der Malsburg, T., & Angele, B. (2017). False positives and other statistical errors in standard analyses of eye movements in reading. Journal of Memory and Language, 94, 119–133. <a href='https://doi.org/10.1016/j.jml.2016.10.003'>[doi]</a></li>
+<i>Eye-tracking (reading)</i>
+<li>Vasishth, S., von der Malsburg, T., & Engelmann, F. (2013). What eye movements can tell us about sentence comprehension. <i></i>Wiley Interdisciplinary Reviews: Cognitive Science</i>, 4(2), 125–134.  <a href='https://doi.org/10.1002/wcs.1209'>[doi]</a></li>
+<li>von der Malsburg, T., & Angele, B. (2017). False positives and other statistical errors in standard analyses of eye movements in reading. <i>Journal of Memory and Language</i>, 94, 119–133. <a href='https://doi.org/10.1016/j.jml.2016.10.003'>[doi]</a></li>
 
 <br>
 <i>Data simulation and power</i>
-<li>DeBruine, L. M., & Barr, D. J. (2021). Understanding Mixed-Effects Models Through Data Simulation. Advances in Methods and Practices in Psychological Science, 4(1), 251524592096511. <a href='https://doi.org/10.1177/2515245920965119'>[doi]</a>
+<li>DeBruine, L. M., & Barr, D. J. (2021). Understanding Mixed-Effects Models Through Data Simulation. <i>Advances in Methods and Practices in Psychological Science</i>, 4(1), 251524592096511. <a href='https://doi.org/10.1177/2515245920965119'>[doi]</a>
 
-<li>Kumle, L., Võ, M. L. H., & Draschkow, D. (2021). Estimating power in (generalized) linear mixed models: An open introduction and tutorial in R. Behavior Research Methods. <a href='https://doi.org/10.3758/s13428-021-01546-0'>[doi]</a></li>
+<li>Kumle, L., Võ, M. L. H., & Draschkow, D. (2021). Estimating power in (generalized) linear mixed models: An open introduction and tutorial in R. <i>Behavior Research Methods</i>. <a href='https://doi.org/10.3758/s13428-021-01546-0'>[doi]</a></li>
 
 <br>
 
