--- a/cv.html
+++ b/cv.html
@@ -179,7 +179,7 @@
 
 	<h3>Languages</h3>
 		<li>English (Native)</li>
-		<li>German (CEFR level B2)</li>
+		<li>German (B2)</li>
 
     </div> <!-- / contents end -->
 	</div> <!-- / container end -->
