--- a/presentations.html
+++ b/presentations.html
@@ -97,6 +97,27 @@ Palleschi, D., Knoeferle, P. Effects of prior speaker-specific knowledge on lang
 
 </table>
 
+<table class="table_line">
+	    <TR VALIGN=TOP>
+	        <td class="table_head">
+	            <p>2021</p>
+	        </td>
+	        <td class="table_right">
+	          <p> 
+<p>
+Palleschi, D.,Ronderos, C.R., Knoeferle, P. Effects of lifetime and fact knowledge in language comprehension. Poster presented at <i>CogSci</i> in Vienna, Austria (virtual)
+<br><br>
+<p>
+
+Palleschi, D.,Ronderos, C.R., Knoeferle, P. Effect of referent lifetime in the processing of verbal morphology: a self-paced reading study. Poster presented at <i>Annual Conference of Human Sentence Processing</i> at University of Pennsylvania, USA (virtual)
+<br><br>
+<p>
+Palleschi, D., Knoeferle, P. Effects of lifetime and fact knowledge in language comprehension. Poster presented at <i>Annual Conference of Human Sentence Processing</i> at University of Pennsylvania, USA (virtual)
+								</p>
+								</TR>
+	        </td>
+
+</table>
 
     </div> <!-- / contents end -->
 	</div> <!-- / container end -->
