added CogSci 2022 proceedings paper to publications

--- a/publications.html
+++ b/publications.html
@@ -58,12 +58,25 @@
 
 			<table class="table_line">
 			   <TR VALIGN=TOP>
-						<td class="table_head">
-								<p>2020</p>
+			     <td class="table_head">
+			       		<p>2022</p>
 						</td>
 						<td class="table_right">
-							<p>Palleschi, D., Ronderos, C. R., & Knoeferle, P. Effects of linguistic context and world knowledge on the processing of tense and aspect: evidence from eye-tracking. In <i>CogSci</i>.		<a href='https://cognitivesciencesociety.org/cogsci20/papers/0821/index.html'>[abstract]</a>
-							<a href='https://cognitivesciencesociety.org/cogsci20/papers/0821/0821.pdf>'>[pdf]</a> </p>
+							<p>Palleschi, D., R., & Knoeferle, P. Effects of linguistic context and world knowledge on the processing of tense and aspect: evidence from eye-tracking. In <i>Proceedings of the Annual Meeting of the Cognitive Science Society</i>, 44.		
+							<a href='https://escholarship.org/uc/item/01f6r4td'>[pdf]</a> </p>
+				</TR>
+	        </td>
+
+</table>
+								<table class="table_line">
+	    <TR VALIGN=TOP>
+	        <td class="table_head">
+	            <p>2020</p>
+	        </td>
+	        <td class="table_right">
+	        
+							<p>Palleschi, D., Ronderos, C. R., & Knoeferle, P. Effects of linguistic context and world knowledge on the processing of tense and aspect: evidence from eye-tracking. <i>Proceedings of the Annual Meeting of the Cognitive Science Society</i>, 42.		<a href='https://cognitivesciencesociety.org/cogsci20/papers/0821/index.html'>[abstract]</a>
+							<a href='https://cognitivesciencesociety.org/cogsci20/papers/0821/0821.pdf'>[pdf]</a> </p>
 						</td>
 					</tr>
 	    <tr>
