Fixed M.A. title in CV

--- a/cv.html
+++ b/cv.html
@@ -72,7 +72,7 @@
 	        </td>
 	        <td class="table_right">
 	            <p><b>MSc in Clinical Linguistics</b> (EMCL - European Masters in Clinical Linguistics), joint degree from the University of Potsdam (Germany), University of Groningen (Netherlands), and University of Eastern Finland (Finland) (Supervisor: Prof. Roelien Bastiaanse)</p>
-	            <p><b>MA in Linguistics</b>, University of Eastern Finland (Finland)</p>
+	            <p><b>MA in Clinical Linguistics</b>, University of Eastern Finland (Finland)</p>
 	        </td>
 	      </tr>
 	        <TR VALIGN=TOP>
