updated tech skills in CV

--- a/cv.html
+++ b/cv.html
@@ -170,9 +170,12 @@
 
 <h3>Technical and research skills</h3>
 			<li>Eye-tracking (EyeLink1000, Experiment Builder, EyeLink Data Viewer)</li>
+			<li>EEG data collection (BrainProducts)</li>
+			<li>Internet-based experiments (PCIbex, Prolific, ClickWorker)</li>
 			<li>Audio processing (Praat, Audacity)</li>
-			<li>Statistics (R)</li>
+			<li>R and RStudio (data wrangling, analysis, visualisation)</li>
 			<li>Dynamic reports (RMarkdown)</li>
+			<li>Version control (Git, GitHub, GitLab)</li>
 
 	<h3>Organisation</h3>
 			<li>ESLP (Embodied and Situated Language Processing)/ AttLis (The Attentive Listener in the Visual World) Conference, 28-30 August 2019</li>
