--- a/cv.html
+++ b/cv.html
@@ -54,6 +54,19 @@
 
 <div id="container">
   <div id="contents">
+    
+    <h3>Academic employment</h3>
+
+		<table class="table_line">
+			<tr>
+					<td class="table_head">
+							<p>2019-present</p>
+					</td>
+					<td class="table_right">
+						<p><b>Scientific staff member</b>, Institute for German Language and Linguistics, Humboldt-Universität zu Berlin</p>
+					</td>
+				</tr>
+		 </table>
 
       <h3>Education</h3>
 
@@ -71,7 +84,7 @@
 	            <p>2015-2017</p>
 	        </td>
 	        <td class="table_right">
-	            <p><b>MSc in Clinical Linguistics</b> (EMCL - European Masters in Clinical Linguistics), joint degree from the University of Potsdam (Germany), University of Groningen (Netherlands), and University of Eastern Finland (Finland) (Supervisor: Prof. Roelien Bastiaanse)</p>
+	            <p><b>MSc in Clinical Linguistics</b> (EMCL - European Masters in Clinical Linguistics), joint degree from the University of Potsdam (Germany), University of Groningen (Netherlands), and University of Eastern Finland (Finland) (Supervisor: Prof. Roelien Bastiaanse)</p><br>
 	            <p><b>MA in Clinical Linguistics</b>, University of Eastern Finland (Finland)</p>
 	        </td>
 	      </tr>
@@ -84,19 +97,6 @@
 	        </td>
 	      </tr>
 	</table>
-
-		<h3>Academic employment</h3>
-
-		<table class="table_line">
-			<tr>
-					<td class="table_head">
-							<p>2019-present</p>
-					</td>
-					<td class="table_right">
-						<p>Scientific staff member, Institute for German Language and Linguistics, Humboldt-Universität zu Berlin</p>
-					</td>
-				</tr>
-		 </table>
 
 	  <h3>Teaching experience</h3>
 
@@ -152,10 +152,20 @@
 <table class="table_line">
    <TR VALIGN=TOP>
 		<td class="table_head">
+		  	<p>2022</p>
+		</td>
+		<td class="table_right">
+			<p>'Introduction to Bayesian data analysis' <br><i>6th Summer School on Statistical Methods for Linguistics and Psychology.</i> Uniersität Potsdam, Germany. Taught by Shravan Vasishth</p>
+			<br>
+			<p>'Generalised Additive Modelling (GAMMs) in Statistics'<br> Leibniz-Zentrum Allgemeine Sprachwissenschaft (ZAS Berlin), Germany. Taught by Màrton Sóskuthy.</p>
+		</td>
+	</tr>
+   <TR VALIGN=TOP>
+		<td class="table_head">
 				<p>2021</p>
 		</td>
 		<td class="table_right">
-			<p>'Advanced methods in frequentist statistics with Julia' <i>5th Summer School on Statistical Methods for Linguistics and Psychology (Taught by Phillip Alday, Douglas Bates, and Reinhold Kliegl)</i></p>
+			<p>'Advanced methods in frequentist statistics with Julia'<br><i>5th Summer School on Statistical Methods for Linguistics and Psychology.</i>Uniersität Potsdam, Germany (virtual). Taught by Phillip Alday, Douglas Bates, and Reinhold Kliegl.</p>
 		</td>
 	</tr>
    <TR VALIGN=TOP>
@@ -163,7 +173,7 @@
 				<p>2020</p>
 		</td>
 		<td class="table_right">
-			<p>'Foundational methods in frequentist statistics' <i>4th Summer School on Statistical Methods for Linguistics and Psychology (Taught by Daniel Schad)</i></p>
+			<p>'Foundational methods in frequentist statistics'<br><i>4th Summer School on Statistical Methods for Linguistics and Psychology.</i> Uniersität Potsdam, Germany (virtual). Taught by Daniel Schad.</p>
 		</td>
 	</tr>
 </table>
