--- a/r_command.html
+++ b/r_command.html
@@ -4,9 +4,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Aine Ito</title>
+	<title>Daniela Palleschi</title>
 
-	<meta name="description" content="Psycholinguist at the National University of Singapore">
+	<meta name="description" content="Doctoral candidate at the Humboldt-Universität zu Berlin">
   <link rel="icon" href="images/initials.png">
 	<link rel="stylesheet" href="style.css" type="text/css">
 
@@ -20,10 +20,10 @@
 		<div id="header_inner" class="clearfix">
 		<div id="h_logo">
 				<h2><a href="index.html">
-						Aine Ito
+						Daniela Palleschi
 				</a></h2>
 				<p class="h_sub">
-						伊藤愛音
+						dænˈjɛlə pɑːˈleski
 				</p>
 		</div>
 
@@ -34,15 +34,17 @@
 						 <li><a href="publications.html">Publications</a></li>
 						 <li><a href="presentations.html">Presentations</a></li>
 						 <li><a href="resources.html">Resources</a></li>
-						 <li><a href="r_command.html">R commands</a></li>
 					 </ul>
 			 </div>
-</div>
-</div>
+			 </div>
+
+	 </div>
+
+<!-- Contents  ------------------------------------------------------------------------------>
 
 <div id="container_fullwidth">
 
-<iframe src="R_notes.html" width="100%" height="600"></iframe>
+<iframe src="RStudio_tips.html" width="100%" height="600"></iframe>
 
 </div> <!-- / container_fullwidth end -->
 
