fixed r_command height to 100%

--- a/r_command.html
+++ b/r_command.html
@@ -44,7 +44,7 @@
 
 <div id="container_fullwidth">
 
-<iframe src="RStudio_tips.html" width="100%" height="600"></iframe>
+<iframe src="RStudio_tips.html" width="100%" height="100%"></iframe>
 
 </div> <!-- / container_fullwidth end -->
 
