more description of how to update r_commands page with this html file

--- a/RStudio_tips.html
+++ b/RStudio_tips.html
@@ -1558,8 +1558,9 @@ contains the headers etc. of my website, and just tell it to input the
 <ol style="list-style-type: decimal">
 <li>Create .Rmd file that I use to create a subsequent .html file</li>
 <li>add, commit, push the produced .html file to my GitPages repo</li>
-<li>Eventually create a GitPages html file that uses the generated .html
-within the format of my GitPages</li>
+<li>Create a GitPages html file that uses the generated .html within the
+format of my GitPages (in my case, r_command.html, which reads in
+RStudio_tips.html)</li>
 </ol>
 </div>
 </div>
