added package section

--- a/RStudio_tips.html
+++ b/RStudio_tips.html
@@ -1531,6 +1531,10 @@ RStudio. This was a gradual process that took a lot of time and daily
 use to get here. I’m by no means a pro, but Linguistics students are
 very often not pros in programming and need a bit more ‘plain talk’ to
 get there.</p>
+<div id="packages" class="section level2">
+<h2>Packages</h2>
+<pre class="r"><code>library(ggplot2)</code></pre>
+</div>
 <div id="including-plots" class="section level2">
 <h2>Including Plots</h2>
 <p>You can also embed plots, for example:</p>
